--- a/restlessmedia.Module.Property.Vebra.Tests/restlessmedia.Module.Property.Vebra.Tests.csproj
+++ b/restlessmedia.Module.Property.Vebra.Tests/restlessmedia.Module.Property.Vebra.Tests.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="5.1.1" />
     <PackageReference Include="restlessmedia.Test" Version="1.0.0" />
+    <PackageReference Include="SqlBuilder.DataServices" Version="2.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.abstractions" Version="2.0.3" />
     <PackageReference Include="xunit.analyzers" Version="0.10.0" />
