--- a/src/restlessmedia.Module.Property.Vebra.csproj
+++ b/src/restlessmedia.Module.Property.Vebra.csproj
@@ -54,7 +54,7 @@
     <PackageReference Include="restlessmedia.Module.Security" Version="4.0.0" />
     <PackageReference Include="SqlBuilder" Version="2.0.1" />
     <PackageReference Include="SqlBuilder.DataServices" Version="2.0.0" />
-    <PackageReference Include="StackExchange.Redis.StrongName" Version="1.2.6" />
+    <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
     <PackageReference Include="System.AppContext" Version="4.3.0" />
     <PackageReference Include="System.Buffers" Version="4.5.1" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
